# mipsim

./: Cargo.toml  LICENSE  README.md
src/: editor.rs  main.rs  output.rs
src/app/: editor.rs  highlighting.rs  menu_bar.rs  mod.rs  output.rs
src/app/menu/: commands.rs  mod.rs
src/app/tabs/: editor.rs  memory.rs  mod.rs  output.rs
src/assembler/: directive.rs  inst.rs  lexer.rs  mod.rs  parser.rs
src/simulator/: io.rs  load.rs  memory.rs  mod.rs  processor.rs  registers.rs  spawn.rs
src/util/: indexed_chars.rs  mod.rs  par_buf.rs
