[package]
name = "mipsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crossbeam = "0.8.2"
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = "0.21.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
rfd = "0.11.2"
thiserror = "1.0.39"
